--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -1,10 +1,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
+*{
+  list-style: none;
+  text-decoration: none;
+  color: black;
+}
 body {
   height: 100vh;
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 img {
@@ -23,4 +31,37 @@ input {
   border-radius: 16px;
   padding: 8px 24px;
   width: 400px;
+}
+
+.header, .footer{
+  display: flex;
+  justify-content: space-between;
+  padding: 10px;
+}
+
+.header ul{
+  display: flex;
+  gap: 10px;
+  padding: 0; 
+}
+
+.footer{
+  background-color:#eee ;
+}
+
+.footer ul{
+  display: flex;
+  gap: 10px;
+  padding: 0;
+  margin: 3px;
+ }
+
+.content{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.buttons{
+  padding-top: 10px;
 }
