--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -1,7 +1,16 @@
+* {
+  list-style: none;
+  text-decoration: none;
+}
+
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+
 }
 
 .header {
@@ -24,6 +33,53 @@ body {
 
 .card {
   border: 1px solid #eee;
-  box-shadow: 2px 4px 16px rgba(0,0,0,.06);
+  box-shadow: 2px 4px 16px rgba(0, 0, 0, .06);
   border-radius: 4px;
+  padding: 48px;
+  margin: 10px;
 }
+
+.header {
+  display: flex;
+  align-items: center;
+  font-size: 32px;
+  font-weight: 900;
+  padding-left: 16px;
+}
+
+.footer {
+  display: flex;
+  justify-content: center;
+  padding-top: 16px;
+}
+
+.cont1 {
+  display: flex;
+  flex: 1;
+
+
+}
+
+.sidebar {
+  flex-shrink: 0;
+  width: 300px;
+  padding: 16px;
+}
+
+a {
+  color: rgb(244, 243, 243);
+  font-weight: bold;
+}
+
+.cont2 {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 22px;
+  
+}
+
+.card{
+  width: 300px;
+  padding: 40px;
+}
+
